--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,60 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.CineMates" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.CineMates" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/mirage_100</item>
+        <item name="colorPrimaryVariant">@color/mirage_20</item>
+        <item name="colorOnPrimary">@color/alabaster</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/lynch_100</item>
+        <item name="colorSecondaryVariant">@color/lynch_20</item>
+        <item name="colorOnSecondary">@color/geyser</item>
+        <item name="colorAccent">@color/vermilion_100</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@color/mirage_100</item>
+
+
+    </style>
+
+    <!-- TabLayout Style-->
+    <style name="Tab_Layout_Small" parent="Widget.MaterialComponents.TabLayout">
+        <item name="tabIndicatorColor">@color/vermilion_100</item>
+        <item name="tabSelectedTextColor">@color/vermilion_100</item>
+        <item name="tabMode">auto</item>
+        <item name="android:background">@color/lynch_100</item>
+        <item name="tabTextAppearance">@style/MyCustomTextAppearanceSmallTab</item>
+        <item name="tabIndicatorFullWidth">false</item>
+        <item name="tabGravity">center</item>
+        <item name="tabTextColor">@color/geyser</item>
+    </style>
+
+    <style name="Tab_Layout_Huge" parent="Widget.MaterialComponents.TabLayout">
+        <item name="tabIndicatorColor">@android:color/transparent</item>
+        <item name="tabIndicatorHeight">0dp</item>
+        <item name="tabSelectedTextColor">@color/alabaster</item>
+        <item name="tabMode">scrollable</item>
+        <item name="android:background">@color/mirage_100</item>
+        <item name="tabTextAppearance">@style/MyCustomTextAppearance</item>
+        <item name="tabTextColor">@color/geyser</item>
+    </style>
+
+    <style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="MyCustomTextAppearanceSmallTab" parent="MyCustomTextAppearance">
+        <item name="android:textSize">16sp</item>
+    </style>
+    <!--  Fine TabLayout Style-->
+
+    <style name="item_title_style">
+        <item name="android:textColor">@color/alabaster</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
