--- a/app/src/main/res/layout/fragment_standard_lists.xml
+++ b/app/src/main/res/layout/fragment_standard_lists.xml
@@ -13,6 +13,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:background="@color/mirage_100"
+            app:menu="@menu/menu_change_view"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:layout_scrollFlags="scroll|enterAlways|snap"
