--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -17,6 +17,7 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
+            app:menu="@menu/menu_change_view"
             android:background="@color/lynch_100"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
