--- a/app/src/main/res/menu/menu_change_view.xml
+++ b/app/src/main/res/menu/menu_change_view.xml
@@ -3,13 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_switch_list"
         android:icon="@drawable/ic_round_view_list_24"
         android:title="View"
+        android:iconTint="@color/geyser"
         android:visible="true"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
+        android:id="@+id/menu_switch_grid"
         android:icon="@drawable/ic_round_view_module_24"
         android:title="View"
         android:visible="false"
-        app:showAsAction="always" />
+        android:iconTint="@color/geyser"
+        app:showAsAction="ifRoom" />
 </menu>
