Creato il fragment del profilo
+ Creato il design del profilo accessibile dalla home
+ Utilizzato data binding per la creazione delle azioni del profilo

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,8 +19,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:scaleType="fitCenter"
-            tools:src="@tools:sample/avatars" />
+            app:tint="@color/alabaster"
+            android:src="@drawable/ic_baseline_person_24"
+            android:scaleType="fitCenter"/>
 
         <ImageView
             android:id="@+id/imageLogo"
