--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,6 +12,9 @@
         <action
             android:id="@+id/action_homeFragment_to_detailedViewFragment"
             app:destination="@id/detailedViewFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_accountFragment"
+            app:destination="@id/accountFragment" />
     </fragment>
 
     <fragment
@@ -41,4 +44,9 @@
             app:nullable="true"
             android:defaultValue="Section" />
     </fragment>
+    <fragment
+        android:id="@+id/accountFragment"
+        android:name="com.example.cinemates.fragment.AccountFragment"
+        android:label="fragment_account"
+        tools:layout="@layout/fragment_account" />
 </navigation>
