--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -39,7 +39,7 @@
         <item name="tabMode">scrollable</item>
         <item name="android:background">@color/mirage_100</item>
         <item name="tabTextAppearance">@style/MyCustomTextAppearance</item>
-        <item name="tabTextColor">@color/geyser</item>
+        <item name="tabTextColor">@color/lynch_100</item>
     </style>
 
     <style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
