--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -18,6 +18,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             app:menu="@menu/menu_change_view"
+            app:navigationIcon="@drawable/ic_outline_arrow_back_24"
             android:background="@color/lynch_100"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
