--- a/app/src/main/res/menu/menu_change_view.xml
+++ b/app/src/main/res/menu/menu_change_view.xml
@@ -6,7 +6,7 @@
         android:id="@+id/menu_switch_list"
         android:icon="@drawable/ic_round_view_list_24"
         android:title="View"
-        android:iconTint="@color/geyser"
+        android:iconTint="@color/alabaster"
         android:visible="true"
         app:showAsAction="ifRoom" />
     <item
@@ -14,6 +14,6 @@
         android:icon="@drawable/ic_round_view_module_24"
         android:title="View"
         android:visible="false"
-        android:iconTint="@color/geyser"
+        android:iconTint="@color/alabaster"
         app:showAsAction="ifRoom" />
 </menu>
