--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -5,15 +5,18 @@
         android:id="@+id/action_search"
         android:icon="@drawable/ic_outline_search_24"
         android:title="Search"
+        android:iconTint="@color/alabaster"
         app:showAsAction="collapseActionView|ifRoom" />
     <item
         android:icon="@drawable/ic_round_view_list_24"
         android:title="View"
         android:visible="true"
+        android:iconTint="@color/alabaster"
         app:showAsAction="always" />
     <item
         android:icon="@drawable/ic_round_view_module_24"
         android:title="View"
+        android:iconTint="@color/alabaster"
         android:visible="false"
         app:showAsAction="always" />
 </menu>
