--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/lynch_100"
         app:layout_constraintEnd_toEndOf="parent"
+        app:menu="@menu/menu_home"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
