--- a/app/src/main/res/layout/fragment_seen.xml
+++ b/app/src/main/res/layout/fragment_seen.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.SeenTabFragment">
+    tools:context=".views.fragment.SeenTabFragment">
 
-    <com.example.cinemates.adapter.EmptyRecyclerView
+    <com.example.cinemates.util.RecyclerViewEmptySupport
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
