--- a/app/src/main/res/layout/list_item_media_poster.xml
+++ b/app/src/main/res/layout/list_item_media_poster.xml
@@ -1,59 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:orientation="vertical">
+
+
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:orientation="vertical">
+        app:cardBackgroundColor="@android:color/transparent"
+        card_view:cardElevation="0dp">
 
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@android:color/transparent"
-            card_view:cardElevation="0dp">
+            android:orientation="vertical">
+
+            <include layout="@layout/layout_movie_poster" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <include layout="@layout/layout_movie_poster"/>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/textTitle"
+                    style="@style/item_title_style"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textTitle"
-                        style="@style/item_title_style"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:lines="2"
-                        tools:text="Movie Title" />
-
-                    <ImageButton
-                        android:id="@+id/iconMore"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:background="@null"
-                        android:src="@drawable/ic_baseline_more_vert_24"
-                        app:tint="@color/alabaster" />
-
-                </LinearLayout>
-
+                    android:layout_weight="1"
+                    android:lines="2"
+                    tools:text="Movie Title" />
 
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 
-    </LinearLayout>
+</LinearLayout>
