--- a/app/src/main/res/layout/section_row.xml
+++ b/app/src/main/res/layout/section_row.xml
@@ -11,20 +11,17 @@
             type="com.example.cinemates.model.Section" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp">
+        android:layout_height="wrap_content">
 
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/linearLayoutCompat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textSectionTitle"
@@ -51,18 +48,16 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/linearLayoutCompat">
 
-            <com.example.cinemates.adapter.EmptyRecyclerView
+            <com.example.cinemates.util.RecyclerViewEmptySupport
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                tools:listitem="@layout/list_item_media_poster"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/list_item_media_poster" />
 
             <include
                 android:id="@+id/empty_view"
@@ -70,5 +65,5 @@
         </RelativeLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 </layout>
