--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.cinemates.fragment.HomeFragment"
+        android:name="com.example.cinemates.views.fragment.HomeFragment"
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_detailedViewFragment"
@@ -15,15 +15,18 @@
         <action
             android:id="@+id/action_homeFragment_to_accountFragment"
             app:destination="@id/accountFragment"/>
+        <action
+            android:id="@+id/action_homeFragment_to_discoverFragment"
+            app:destination="@id/discoverFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/standardListsFragment"
-        android:name="com.example.cinemates.fragment.StandardListsFragment"
+        android:name="com.example.cinemates.views.fragment.StandardListsFragment"
         tools:layout="@layout/fragment_standard_lists" />
     <fragment
         android:id="@+id/moreFragment"
-        android:name="com.example.cinemates.fragment.MoreFragment"
+        android:name="com.example.cinemates.views.fragment.MoreFragment"
         tools:layout="@layout/fragment_more" >
         <action
             android:id="@+id/action_moreFragment_to_accountFragment"
@@ -31,11 +34,11 @@
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.cinemates.fragment.SearchFragment"
+        android:name="com.example.cinemates.views.fragment.SearchFragment"
         tools:layout="@layout/fragment_search" />
     <fragment
         android:id="@+id/detailedViewFragment"
-        android:name="com.example.cinemates.fragment.DetailedViewFragment"
+        android:name="com.example.cinemates.views.fragment.DetailedViewFragment"
         android:label="{section}"
         tools:layout="@layout/fragment_detailed_view" >
         <action
@@ -50,7 +53,19 @@
     </fragment>
     <fragment
         android:id="@+id/accountFragment"
-        android:name="com.example.cinemates.fragment.AccountFragment"
+        android:name="com.example.cinemates.views.fragment.AccountFragment"
         android:label="fragment_account"
         tools:layout="@layout/fragment_account" />
+    <fragment
+        android:id="@+id/discoverFragment"
+        android:name="com.example.cinemates.views.fragment.DiscoverFragment"
+        android:label="Explore"
+        tools:layout="@layout/fragment_discover" >
+        <action
+            android:id="@+id/action_discoverFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_discoverFragment_to_searchFragment"
+            app:destination="@id/searchFragment" />
+    </fragment>
 </navigation>
