--- a/app/src/main/res/layout/list_item_person_information.xml
+++ b/app/src/main/res/layout/list_item_person_information.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="actor"
-            type="info.movito.themoviedbapi.model.people.PersonCast" />
+            type="com.example.cinemates.model.Cast" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
