Ora i poster dei film sono visibili

--- a/app/src/main/res/layout/list_item_media_poster.xml
+++ b/app/src/main/res/layout/list_item_media_poster.xml
@@ -26,7 +26,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <include layout="@layout/layout_movie_poster" />
+                <include layout="@layout/layout_movie_poster"
+                    app:movie="@{movie}"/>
 
 
                 <LinearLayout
